query/y.output

state 0
	$accept: .start $end 

	TSTARTQUERY  shift 2
	TSTARTSTATEMENT  shift 3
	TSTARTEXPRESSION  shift 4
	.  error

	start  goto 1

state 1
	$accept:  start.$end 

	$end  accept
	.  error


state 2
	start:  TSTARTQUERY.query 
	statements: .    (5)

	.  reduce 5 (src line 91)

	query  goto 5
	statements  goto 6

state 3
	start:  TSTARTSTATEMENT.statement 

	TSELECT  shift 10
	TWHEN  shift 11
	.  error

	selection  goto 8
	statement  goto 7
	condition  goto 9

state 4
	start:  TSTARTEXPRESSION.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 12
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 5
	start:  TSTARTQUERY query.    (1)

	.  reduce 1 (src line 64)


state 6
	query:  statements.    (4)
	statements:  statements.statement 

	TSELECT  shift 10
	TWHEN  shift 11
	.  reduce 4 (src line 82)

	selection  goto 8
	statement  goto 20
	condition  goto 9

state 7
	start:  TSTARTSTATEMENT statement.    (2)

	.  reduce 2 (src line 70)


state 8
	statement:  selection.    (7)

	.  reduce 7 (src line 102)


state 9
	statement:  condition.    (8)

	.  reduce 8 (src line 107)


state 10
	selection:  TSELECT.selection_fields selection_group_by selection_name TSEMICOLON 
	selection_fields: .    (10)

	TIDENT  shift 23
	.  reduce 10 (src line 124)

	selection_field  goto 22
	selection_fields  goto 21

state 11
	condition:  TWHEN.expr condition_within TTHEN statements TEND 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 24
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 12
	start:  TSTARTEXPRESSION expr.    (3)
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TEQUALS  shift 25
	TNOTEQUALS  shift 26
	TLT  shift 27
	TLTE  shift 28
	TGT  shift 29
	TGTE  shift 30
	TAND  shift 31
	TOR  shift 32
	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 3 (src line 75)


state 13
	expr:  var_ref.    (36)

	.  reduce 36 (src line 222)


state 14
	expr:  integer_literal.    (37)

	.  reduce 37 (src line 223)


state 15
	expr:  string_literal.    (38)

	.  reduce 38 (src line 224)


state 16
	expr:  TLPAREN.expr TRPAREN 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 37
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 17
	var_ref:  TIDENT.    (40)

	.  reduce 40 (src line 228)


state 18
	integer_literal:  TINT.    (41)

	.  reduce 41 (src line 235)


state 19
	string_literal:  TSTRING.    (42)

	.  reduce 42 (src line 242)


state 20
	statements:  statements statement.    (6)

	.  reduce 6 (src line 96)


state 21
	selection:  TSELECT selection_fields.selection_group_by selection_name TSEMICOLON 
	selection_fields:  selection_fields.TCOMMA selection_field 
	selection_group_by: .    (15)

	TGROUP  shift 40
	TCOMMA  shift 39
	.  reduce 15 (src line 151)

	selection_group_by  goto 38

state 22
	selection_fields:  selection_field.    (11)

	.  reduce 11 (src line 129)


state 23
	selection_field:  TIDENT.TLPAREN TRPAREN 
	selection_field:  TIDENT.TLPAREN TIDENT TRPAREN 

	TLPAREN  shift 41
	.  error


state 24
	condition:  TWHEN expr.condition_within TTHEN statements TEND 
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 
	condition_within: .    (22)

	TWITHIN  shift 43
	TEQUALS  shift 25
	TNOTEQUALS  shift 26
	TLT  shift 27
	TLTE  shift 28
	TGT  shift 29
	TGTE  shift 30
	TAND  shift 31
	TOR  shift 32
	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 22 (src line 198)

	condition_within  goto 42

state 25
	expr:  expr TEQUALS.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 44
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 26
	expr:  expr TNOTEQUALS.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 45
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 27
	expr:  expr TLT.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 46
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 28
	expr:  expr TLTE.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 47
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 29
	expr:  expr TGT.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 48
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 30
	expr:  expr TGTE.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 49
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 31
	expr:  expr TAND.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 50
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 32
	expr:  expr TOR.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 51
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 33
	expr:  expr TPLUS.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 52
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 34
	expr:  expr TMINUS.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 53
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 35
	expr:  expr TMUL.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 54
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 36
	expr:  expr TDIV.expr 

	TLPAREN  shift 16
	TIDENT  shift 17
	TSTRING  shift 19
	TINT  shift 18
	.  error

	expr  goto 55
	integer_literal  goto 14
	string_literal  goto 15
	var_ref  goto 13

state 37
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 
	expr:  TLPAREN expr.TRPAREN 

	TRPAREN  shift 56
	TEQUALS  shift 25
	TNOTEQUALS  shift 26
	TLT  shift 27
	TLTE  shift 28
	TGT  shift 29
	TGTE  shift 30
	TAND  shift 31
	TOR  shift 32
	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  error


state 38
	selection:  TSELECT selection_fields selection_group_by.selection_name TSEMICOLON 
	selection_name: .    (19)

	TINTO  shift 58
	.  reduce 19 (src line 174)

	selection_name  goto 57

state 39
	selection_fields:  selection_fields TCOMMA.selection_field 

	TIDENT  shift 23
	.  error

	selection_field  goto 59

state 40
	selection_group_by:  TGROUP.TBY selection_dimensions 

	TBY  shift 60
	.  error


state 41
	selection_field:  TIDENT TLPAREN.TRPAREN 
	selection_field:  TIDENT TLPAREN.TIDENT TRPAREN 

	TRPAREN  shift 61
	TIDENT  shift 62
	.  error


state 42
	condition:  TWHEN expr condition_within.TTHEN statements TEND 

	TTHEN  shift 63
	.  error


state 43
	condition_within:  TWITHIN.TINT TRANGE TINT TWITHINUNITS 

	TINT  shift 64
	.  error


state 44
	expr:  expr.TEQUALS expr 
	expr:  expr TEQUALS expr.    (24)
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TLT  shift 27
	TLTE  shift 28
	TGT  shift 29
	TGTE  shift 30
	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 24 (src line 209)


state 45
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr TNOTEQUALS expr.    (25)
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TLT  shift 27
	TLTE  shift 28
	TGT  shift 29
	TGTE  shift 30
	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 25 (src line 211)


state 46
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr TLT expr.    (26)
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TGT  shift 29
	TGTE  shift 30
	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 26 (src line 212)


state 47
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr TLTE expr.    (27)
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TGT  shift 29
	TGTE  shift 30
	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 27 (src line 213)


state 48
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr TGT expr.    (28)
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 28 (src line 214)


state 49
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr TGTE expr.    (29)
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 29 (src line 215)


state 50
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr TAND expr.    (30)
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TEQUALS  shift 25
	TNOTEQUALS  shift 26
	TLT  shift 27
	TLTE  shift 28
	TGT  shift 29
	TGTE  shift 30
	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 30 (src line 216)


state 51
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr TOR expr.    (31)
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TEQUALS  shift 25
	TNOTEQUALS  shift 26
	TLT  shift 27
	TLTE  shift 28
	TGT  shift 29
	TGTE  shift 30
	TAND  shift 31
	TPLUS  shift 33
	TMINUS  shift 34
	TMUL  shift 35
	TDIV  shift 36
	.  reduce 31 (src line 217)


state 52
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr TPLUS expr.    (32)
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TMUL  shift 35
	TDIV  shift 36
	.  reduce 32 (src line 218)


state 53
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr TMINUS expr.    (33)
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 

	TMUL  shift 35
	TDIV  shift 36
	.  reduce 33 (src line 219)


state 54
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr TMUL expr.    (34)
	expr:  expr.TDIV expr 

	.  reduce 34 (src line 220)


state 55
	expr:  expr.TEQUALS expr 
	expr:  expr.TNOTEQUALS expr 
	expr:  expr.TLT expr 
	expr:  expr.TLTE expr 
	expr:  expr.TGT expr 
	expr:  expr.TGTE expr 
	expr:  expr.TAND expr 
	expr:  expr.TOR expr 
	expr:  expr.TPLUS expr 
	expr:  expr.TMINUS expr 
	expr:  expr.TMUL expr 
	expr:  expr.TDIV expr 
	expr:  expr TDIV expr.    (35)

	.  reduce 35 (src line 221)


state 56
	expr:  TLPAREN expr TRPAREN.    (39)

	.  reduce 39 (src line 225)


state 57
	selection:  TSELECT selection_fields selection_group_by selection_name.TSEMICOLON 

	TSEMICOLON  shift 65
	.  error


state 58
	selection_name:  TINTO.TSTRING 

	TSTRING  shift 66
	.  error


state 59
	selection_fields:  selection_fields TCOMMA selection_field.    (12)

	.  reduce 12 (src line 134)


state 60
	selection_group_by:  TGROUP TBY.selection_dimensions 

	TIDENT  shift 68
	.  error

	selection_dimensions  goto 67

state 61
	selection_field:  TIDENT TLPAREN TRPAREN.    (13)

	.  reduce 13 (src line 140)


state 62
	selection_field:  TIDENT TLPAREN TIDENT.TRPAREN 

	TRPAREN  shift 69
	.  error


state 63
	condition:  TWHEN expr condition_within TTHEN.statements TEND 
	statements: .    (5)

	.  reduce 5 (src line 91)

	statements  goto 70

state 64
	condition_within:  TWITHIN TINT.TRANGE TINT TWITHINUNITS 

	TRANGE  shift 71
	.  error


state 65
	selection:  TSELECT selection_fields selection_group_by selection_name TSEMICOLON.    (9)

	.  reduce 9 (src line 113)


state 66
	selection_name:  TINTO TSTRING.    (20)

	.  reduce 20 (src line 179)


state 67
	selection_group_by:  TGROUP TBY selection_dimensions.    (16)
	selection_dimensions:  selection_dimensions.TCOMMA TIDENT 

	TCOMMA  shift 72
	.  reduce 16 (src line 156)


state 68
	selection_dimensions:  TIDENT.    (17)

	.  reduce 17 (src line 162)


state 69
	selection_field:  TIDENT TLPAREN TIDENT TRPAREN.    (14)

	.  reduce 14 (src line 145)


state 70
	statements:  statements.statement 
	condition:  TWHEN expr condition_within TTHEN statements.TEND 

	TSELECT  shift 10
	TWHEN  shift 11
	TEND  shift 73
	.  error

	selection  goto 8
	statement  goto 20
	condition  goto 9

state 71
	condition_within:  TWITHIN TINT TRANGE.TINT TWITHINUNITS 

	TINT  shift 74
	.  error


state 72
	selection_dimensions:  selection_dimensions TCOMMA.TIDENT 

	TIDENT  shift 75
	.  error


state 73
	condition:  TWHEN expr condition_within TTHEN statements TEND.    (21)

	.  reduce 21 (src line 185)


state 74
	condition_within:  TWITHIN TINT TRANGE TINT.TWITHINUNITS 

	TWITHINUNITS  shift 76
	.  error


state 75
	selection_dimensions:  selection_dimensions TCOMMA TIDENT.    (18)

	.  reduce 18 (src line 168)


state 76
	condition_within:  TWITHIN TINT TRANGE TINT TWITHINUNITS.    (23)

	.  reduce 23 (src line 203)


35 terminals, 17 nonterminals
43 grammar rules, 77/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
66 working sets used
memory: parser 76/30000
44 extra closures
189 shift entries, 1 exceptions
33 goto entries
47 entries saved by goto default
Optimizer space used: output 143/30000
143 table entries, 0 zero
maximum spread: 35, maximum offset: 63
